# PMPP-Solutions

./: .gitignore  CMakeLists.txt  README.md
Chapter02/: CMakeLists.txt  README.md  ch02_q1_matmul.cu
Chapter02/tests/: test_ch01_q1_matmul.py  test_ch02_q1_matmul.py  test_ch02_q2_mat_vec_matmul.py
Chapter03/: README.md  ch03_q2_mat_vec_matmul.cu
Chapter03/tests/: test_ch03_q1_matmul.py  test_ch03_q2_mat_vec_matmul.py
Chapter04/: README.md
Chapter05/: README.md
